apps/dashy/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dashy
  name: dashy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashy
  strategy: {}
  template:
    metadata:
      labels:
        app: dashy
    spec:
      containers:
        - env:
            - name: NODE_ENV
              value: production
          image: ghcr.io/lissy93/dashy:latest
          livenessProbe:
            exec:
              command:
                - node
                - /app/services/healthcheck
            failureThreshold: 3
            initialDelaySeconds: 40
            periodSeconds: 90
            timeoutSeconds: 10
          name: dashy
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources: {}
      restartPolicy: Always
