apps/dashy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dashy
  name: dashy
spec:
  ports:
    - name: http
      port: 4000
      targetPort: http
  selector:
    app: dashy
