apps/dashy/base/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashy
  namespace: dashy
spec:
  entryPoints:
    - websecure-local
  tls: {}
  routes:
  - match: Host(`dashy.steffenillium.de`)
    kind: Rule
    services:
    - name: dashy-service
      port: http
